fix entire body to revent scrolling on mobile

--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -1,6 +1,7 @@
 html,
 body {
-    position: relative;
+    position: fixed;
+    width: 100%;
     margin: 0;
     padding: 0;
     font-family: 'adelle-sans', sans-serif;
